--- a/stylesheets/pages/main.sass
+++ b/stylesheets/pages/main.sass
@@ -24,4 +24,27 @@ body
 
 .something
   +vendor-prefix(transition, all 1 ease-in-out)
+
+.select-rank-wrap
+  text-align: left
+  margin-bottom: 10px
+
+table
+  td
+    border: solid black 1px
+    height: 50px
+    vertical-align: middle
+    padding: 20px 0
+
+select
+  width: 80%
+  height: 40px
+  border: 1px #ccc solid
+  vertical-align:top
+  font-size: 18px
+  &[name="rank"]
+    width: 50%
+
+.input
+  width: 80%
   
